--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,7 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card{
+  border:none !important
 }
 
 .App-header {
@@ -21,18 +12,50 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  
+}
+.bg-dark{
+  width:100%
+}
+.content-wrapper{
+  padding:0 !important;
+  border:none !important
+}
+.bg-img{
+  background: url('https://media.graytvinc.com/images/810*405/Simpsons.jpg');
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+}
+.bg-img:after{
+  position: absolute;
+  
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.7);
+  
+}
+.content-wrapper{
+  margin: 0 auto;
+  width: 70%;
+
+  padding-top: 100px;
+  padding-bottom: 100px;
+ 
+}
+.Minh-wrapper{
+ height: 120vh;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
+
+
